--- a/practice/pubspec.yaml
+++ b/practice/pubspec.yaml
@@ -61,6 +61,7 @@ flutter:
   assets:
     - assets/ubereatpromotion.png
     - assets/ubereatrestaurantpic.png
+    - assets/chamastacos.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
